feat: first layout of page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="wrap" >
+		<div id='header'>
+			<div class='cv-section'>
+				<div class='big'>
+					<div class='cv-section-title'>
+						<h1>Alex Deiko</h1>
+					</div>
+				</div>
+				<div class='small'>
+					<p>adress</p>
+				</div>	
+			</div>
+		<div id='content'>
 
+		</div>
+		<div id='footer'>
+			
+		</div>
+
+	</div>
 </body>
 </html>
