--- a/index.html
+++ b/index.html
@@ -8,19 +8,49 @@
 <body>
 	<div class="wrap" >
 		<div id='header'>
-			<div class='cv-section'>
-				<div class='big'>
-					<div class='cv-section-title'>
-						<h1>Alex Deiko</h1>
+			<div class='row cv-section'>
+				<div class='span1'>
+					<div class='cv-info'>
+						<p id='adress'>Location: Brest, Belarus<br>
+
+						   Phone: +375-29-7244537<br>
+
+                           Email: alexdejko@gmail.com<br>
+
+                           LinkedIn Profile:www.linkedin.com/in/alexander-deiko</p>
 					</div>
 				</div>
-				<div class='small'>
-					<p>adress</p>
+				<div class='span2'>
+					<div class='cv-section-title'>
+						<img src="photo.jpg" alt="Alex Dejko">
+						<h1>Alex Deiko</h1>
+						<h5>FRONT END DEVELOPER</h5>
+					</div>
 				</div>	
 			</div>
+		</div>	
 		<div id='content'>
-
-		</div>
+			<div class='row cv-section'>
+				<div class='span1'>
+					<div class='cv-section-title'>
+					<h2>Summary</h2>
+					</div>
+				</div>
+				<div class='span2'>
+					<p>A self-motivated, ambitious and hard-working individual seeks the position of Entry Level Web Developer in a thriving, exciting, and growing company. Bringing programming experience in JavaScript, Python, CSS and HTML, as well as ability to communicate effectively in a team setting, and possessing a strong willingness to learn.</p>
+				</div>	
+				<div class=' row cv-section'>
+				<div class='span1'>
+					<div class='cv-section-title'>
+					<h2>Technical Skills</h2>
+					</div>
+				</div>
+				<div class='span2'>
+					<p>Front-end: JavaScript, HTML, CSS <br>
+					Back-end: Python</p>
+				</div>	
+			</div>
+		</div>	
 		<div id='footer'>
 			
 		</div>
