feat: add skills

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div style='position: relative;'>
 	<div class="wrap" >
 		<div id='header'>
-			<div class='row cv-section'>
+			<div class='cv-section'>
 				<div class='span1'>
 					<div class='cv-info'>
 						<p id='adress'>Location: Brest, Belarus<br>
@@ -30,31 +31,85 @@
 			</div>
 		</div>	
 		<div id='content'>
-			<div class='row cv-section'>
+			<div class='cv-section'>
+
 				<div class='span1'>
 					<div class='cv-section-title'>
 					<h2>Summary</h2>
 					</div>
 				</div>
+
 				<div class='span2'>
 					<p>A self-motivated, ambitious and hard-working individual seeks the position of Entry Level Web Developer in a thriving, exciting, and growing company. Bringing programming experience in JavaScript, Python, CSS and HTML, as well as ability to communicate effectively in a team setting, and possessing a strong willingness to learn.</p>
 				</div>	
-				<div class=' row cv-section'>
+			</div>
+
+			<div class='cv-section'>
 				<div class='span1'>
 					<div class='cv-section-title'>
 					<h2>Technical Skills</h2>
 					</div>
 				</div>
+
 				<div class='span2'>
 					<p>Front-end: JavaScript, HTML, CSS <br>
 					Back-end: Python</p>
+				</div>
+
+			<div class='cv-section'>
+
+				<div class='span1'>
+					<div class='cv-section-title'>
+					<h2>Code examples:</h2>
+					</div>
+				</div>
+
+				<div class='span2'>
+					<p>A self-motivated, ambitious and hard-working individual seeks the position of Entry Level Web Developer in a thriving, exciting, and growing company. Bringing programming experience in JavaScript, Python, CSS and HTML, as well as ability to communicate effectively in a team setting, and possessing a strong willingness to learn.Code examples you can find at my <a href="https://github.com/alexdejko">git repository</a></p>
 				</div>	
 			</div>
+
+			<div class='cv-section'>
+
+				<div class='span1'>
+					<div class='cv-section-title'>
+					<h2>Education and qualifications</h2>
+					</div>
+				</div>
+
+				<div class='span2'>
+					<p>Belarusian State University of Informatics and Radioelectronics - 2003 – 2008<br>
+						Faculty of Infocommunication Technologies<br>
+
+						Major in Telecommunication Systems; diploma cum laude.</p>
+				</div>	
+			</div>
+
+			<div class='cv-section'>
+
+				<div class='span1'>
+					<div class='cv-section-title'>
+					<h2>Foreign languages</h2>
+					</div>
+				</div>
+
+				<div class='span2'>
+					<p>English: Intermediate Level (B1+)<br>
+						“International Language House” courses, Brest – 2014 - 2017<br>
+						French: Intermediate Level (B1)<br>
+						Certificate DELF B1 - 2012</p>
+				</div>	
+			</div>
+
+
+
+
 		</div>	
 		<div id='footer'>
 			
 		</div>
 
 	</div>
+	<div>
 </body>
 </html>
