feat: add final info

--- a/index.html
+++ b/index.html
@@ -55,20 +55,7 @@
 					<p>Front-end: JavaScript, HTML, CSS <br>
 					Back-end: Python</p>
 				</div>
-
-			<div class='cv-section'>
-
-				<div class='span1'>
-					<div class='cv-section-title'>
-					<h2>Code examples:</h2>
-					</div>
-				</div>
-
-				<div class='span2'>
-					<p>A self-motivated, ambitious and hard-working individual seeks the position of Entry Level Web Developer in a thriving, exciting, and growing company. Bringing programming experience in JavaScript, Python, CSS and HTML, as well as ability to communicate effectively in a team setting, and possessing a strong willingness to learn.Code examples you can find at my <a href="https://github.com/alexdejko">git repository</a></p>
-				</div>	
-			</div>
-
+			
 			<div class='cv-section'>
 
 				<div class='span1'>
@@ -101,15 +88,19 @@
 				</div>	
 			</div>
 
+			<div class='cv-section'>
 
+				<div class='span1'>
+					<div class='cv-section-title'>
+					<h2>Code examples:</h2>
+					</div>
+				</div>
 
-
-		</div>	
-		<div id='footer'>
-			
-		</div>
-
+				<div class='span2'>
+					<p>Code examples you can find at my <a href="https://github.com/alexdejko">git repository</a></p>
+				</div>	
+			</div>
 	</div>
-	<div>
+	
 </body>
 </html>
